--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
 
   <section class="gallery">
-    <img src="https://placekitten.com/600/600" alt="Sample photo">
+  <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?w=800" alt="Cute cat">
     <button class="buy"><span lang="ja">このしゃしんを かう</span><span lang="en">Buy this photo</span></button>
   </section>
 
