--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 
   <section class="gallery">
   <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?w=800" alt="Cute cat">
-    <button class="buy"><span lang="ja">このしゃしんを かう</span><span lang="en">Buy this photo</span></button>
+   <button class="buy" onclick="location.href='https://example.com/purchase'">
+  <span lang="ja">このしゃしんを かう</span>
+  <span lang="en">Buy this photo</span>
+</button>
+
   </section>
 
   <footer>
@@ -45,3 +49,4 @@
   </script>
 </body>
 </html>
+
