--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section class="gallery">
   <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?w=800" alt="Cute cat">
-   <button class="buy" onclick="location.href='https://example.com/purchase'">
+   <button class="buy" onclick="location.href='https://buy.stripe.com/test_3cIcN5cNadA1cal4xrgEg00'">
   <span lang="ja">このしゃしんを かう</span>
   <span lang="en">Buy this photo</span>
 </button>
@@ -49,4 +49,5 @@
   </script>
 </body>
 </html>
+
 
